--- a/collection-vue/index.html
+++ b/collection-vue/index.html
@@ -12,6 +12,14 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>Vite + Vue + TS</title>
+    <!-- QQ 登录 -->
+    <script
+      type="text/javascript"
+      charset="utf-8"
+      src="https://connect.qq.com/qc_jssdk.js"
+      data-appid="101998494"
+      data-redirecturi="https://imooc-front.lgdsunday.club/login"
+    ></script>
   </head>
   <body>
     <div id="app"></div>
